--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "keywords": ["express", "education", "API design", "express-sse", "lowdb"],
+  "keywords": [
+    "express",
+    "education",
+    "API design",
+    "express-sse",
+    "lowdb"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -15,5 +21,8 @@
     "express": "^4.17.1",
     "express-sse": "^0.5.3",
     "lowdb": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
